<resources>
    <string name="app_name">ThinSecret</string>

    <string name="altura">Altura</string>

    <string name="init_IDR">Para começar, vamos calcular sua Ingestão Diária Recomendada. Sua IDR é a quantidade ideal de alimentos que você deve consumir todos os dias.</string>

    <string name="init_IDR2">A IDR é gerada de acordo com sua meta nutricional, seu nível de atividade, sua idade, seu peso e outras características pessoais.</string>

    <string name="goal_title">Qual seu objetivo atual?</string>
    <string name="goal_1">Perder Peso</string>
    <string name="goal_2">Manter Peso</string>
    <string name="goal_3">Ganhar Peso</string>

    <string name="title">Thin</string>
    <string name="title2">Secret</string>
    <string name="subtitle">Controle Seu Corpo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="body_title">Informações Corporais</string>
    <string name="height_hint">Altura</string>
    <string name="cm">cm</string>
    <string name="weight_hint">Peso</string>
    <string name="kg">Kg</string>

    <string name="diet_title">Tipo de Dieta desejada</string>
    <string name="lowcarb">Carboidratos baixos</string>
    <string name="lbl_lowcarb1">Redução do açúcar: alimentos açucarados, refrigerantes, grãos refinados e produtos com alto teor de açúcar são evitados.</string>
    <string name="lbl_lowcarb2">Aumento do consumo de vegetais com baixo teor de carboidratos: vegetais como espinafre, brócolis, couve-flor e abobrinha são frequentemente incluídos.</string>
    <string name="midcarb">Carboidratos moderados</string>
    <string name="lbl_midcarb1">Fontes de carboidratos saudáveis: prioriza-se o consumo de carboidratos provenientes de grãos integrais, frutas, legumes e outros alimentos saudáveis.</string>
    <string name="lbl_midcarb2">Ênfase na qualidade dos alimentos: a atenção é voltada para escolher alimentos não processados e nutritivos.</string>
    <string name="highcarb">Carboidratos altos</string>
    <string name="lbl_highcarb1">Ênfase em grãos, legumes e frutas: alimentos ricos em carboidratos, como pães, massas, arroz, cereais, legumes e frutas, são a base da dieta.</string>
    <string name="lbl_highcarb2">Energia de rápida absorção: uma maior ingestão de carboidratos pode fornecer energia rápida, mas é importante escolher fontes de carboidratos integrais e minimamente processados.</string>
    <string name="diet_subtitle">É possível alcançar seu objetivo com qualquer tipo de dieta, o que muda é o tempo necessário para isso!</string>


    <string name="tab_item_1">Adicionar Refeições</string>
    <string name="tab_item_2">Relatório</string>
    <string name="tab_item_3">Status Corporal</string>

    <string name="lbl_dec">Sou transgênero?</string>



    <string name="act_lvl_title">Seu nível de atividade</string>
    <string name="act_lvl_sedentary">Sedentário</string>
    <string name="act_lvl_low">Pouco Ativo</string>
    <string name="act_lvl_medium">Ativo</string>
    <string name="act_lvl_high">Altamente Ativo</string>
    <string name="act_lvl_extreme">Extremamente Ativo</string>
    <string name="act_lvl_sedentary_description">Pouco ou nenhum exercício</string>
    <string name="act_lvl_low_description">Exercício leve 1 a 3 dias por semana</string>
    <string name="act_lvl_medium_description">Exercício moderado, fazer desporto 3 a 5 dias por semana</string>
    <string name="act_lvl_high_description">Exercício pesado de 5 a 6 dias por semana</string>
    <string name="act_lvl_extreme_description">Exercício pesado diariamente e até 2x por dia</string>


    <string name="new_user_button">Sou um novo usuário</string>
    <string name="existing_user_button">Já possuo uma conta</string>

    <string name="login_title">Login</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Senha</string>
    <string name="confirm_password_hint">Confirmar Senha</string>
    <string name="sign_in_button">Entrar</string>
    <string name="registration_title">Registro</string>
    <string name="name_hint">Nome</string>
    <string name="phone_hint">Telefone</string>


    <string name="user_settings_title">Configurações do Usuario</string>


    <string name="search_hint">Pesquisar</string>
    <string name="idr_text">IDR: 00000</string>
    <string name="ir_text">IR: 00000</string>
    <string name="btn_esvazia_lista">Esvaziar lista</string>
    <string name="btn_adicionar_refeicao">Adicionar Refeição</string>
    <string name="esvaziar_lista">Esvaziar lista</string>
    <string name="adicionar_refeicao">Adicionar Refeição</string>
    <string name="finalizar">Finalizar</string>

    <string name="reset_button_text">Redefinir</string>
    <string name="save_button_text">Salvar</string>
    <string name="logout_button_text">Logout</string>
    <string name="load_button_text">Carregar</string>
    <string name="imc_hint">IMC</string>
    <string name="idr_hint">IDR</string>

    <string name="age_hint">Idade</string>


    <string name="exception_empty_field">Preencha todos os campos!</string>
    <string name="exception_invalid_user">Falha na Autenticação</string>
    <string name="exception_option_not_selected">Selecione uma opção!</string>
    <string name="exception_password_not_matches">As senhas não coincidem!</string>
    <string name="exception_failed_account_creation">Falha ao criar a conta."</string>
    <string name="exception_invalid_age">Idade insuficiente para ingressar"</string>

</resources>