<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.home.diary.DiaryFragment">

    <!-- TODO: Update blank fragment layout -->

    <SearchView
        android:id="@+id/food_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_search_result"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/food_search"
        android:layout_marginTop="10dp"
        android:elevation="4dp"/>

    <RelativeLayout
        android:id="@+id/status_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="13dp"
        android:layout_below="@id/food_search">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardIdr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/idrView"
                android:layout_width="155dp"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/idr_text"
                android:textSize="27dp"
                />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/irView"
                android:layout_width="155dp"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/ir_text"
                android:textSize="27dp"
                />
        </com.google.android.material.card.MaterialCardView>
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scroll_food_list"
        android:layout_below="@id/status_layout"
        android:layout_width="match_parent"
        android:layout_height="300dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/design_default_color_on_primary"
            style="@style/Widget.Material3.CardView.Outlined"
            android:layout_margin="20dp"
            app:cardCornerRadius="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:padding="30dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_centerHorizontal="true"
                    android:id="@+id/recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/btn_layout"
        android:layout_below="@id/scroll_food_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_esvazia_lista"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#b23"
            android:text="@string/esvaziar_lista"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/mainBackground"
            android:fontFamily="@font/acme"
            app:cornerRadius="8dp"
            android:layout_centerHorizontal="true"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_enviar_lista"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/mainSecond"
            android:text="@string/adicionar_refeicao"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="@color/mainText"
            android:fontFamily="@font/acme"
            app:cornerRadius="8dp"
            android:layout_below="@id/btn_esvazia_lista"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"/>
    </RelativeLayout>
</RelativeLayout>
